please work please work please work

--- a/Spartan/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/Spartan/en.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "OPTIONAL" = " (optional)";
 "PIXELS" = "pixels";
 "UNKNOWN" = "Unknown";
+"OPEN" = "Open";
 
 //main view
 "FREE_SPACE" = "Free space: ";
