--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -68,8 +68,8 @@
 "SECONDS" = "seconds";
 
 //text editor
-"LINEADD" = "Add Line to End";
-"LINEREMOVE" = "Remove Line at End";
+"LINEADD" = "Add Line After";
+"LINEREMOVE" = "Remove Line at";
 "LINEADD_DESCRIPTION" = "Enter new text line";
 
 //touch view
