--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -145,6 +145,7 @@
 "SETTINGS_AUTOCOMPLETE_DESC_1" = "If enabled, will automatically add file extensions if you don't add them,";
 "SETTINGS_AUTOCOMPLETE_DESC_2" = "such as adding '/' when changing directory or '.zip' to archives.";
 "SETTINGS_AUTOCOMPLETE_WARNING" = "WARNING: Make sure you type your filepaths **exactly** if you disable this!";
+"SETTINGS_LOGFONTSIZE" = "Sets the font size for log windows when installing a package or running a binary.";
 "CREDITS" = "Credits";
 
 
