WORKING binary spawning and partial symlink support
Former-commit-id: 4b290dde29f033dc963be161affd33e7a87523c5

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -182,6 +182,7 @@
 
 //spawn
 "SPAWN_ARGS" = "Enter program arguments";
+"SPAWN_ENV" = "Enter environment variables";
 "SPAWN_CONFIRM" = "Spawn";
 
 //dpkg
