plist editor was accidentally not called + symlinks are fully supported
Former-commit-id: f96f8104bccb0ddbac966abd0805725d7eec0423

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -189,3 +189,7 @@
 "DPKGDEB_OUTDIR" = "Specify the destination directory";
 "DPKGDEB_OUTNAME" = "Specify the deb's filename";
 "DPKGDEB_COMPTYPE" = "Specify the compression type to use";
+
+//filenotfound
+"SHOW_NOTFOUND" = "The file does not exist, or it was moved.";
+"SHOW_OLDDEST" = "The listed destination is ";
