in progress file permission editing, also the previous commit did some cleanup on older views
Former-commit-id: b4de4fb295c92981edab824ab0bea561aa76b9c7

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 //main view
 "FREE_SPACE" = "Free space: ";
 "INPUT_DIRECTORY" = "Input directory";
+"PERMSEDIT" = "Edit file permissions";
 
 //context menu
 "INFO" = "Info";
