button width resize with sheikah font + fix button size calculation

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "TRASHYEET" = "Empty Trash";
 "GOTOTRASH" = "Move to Trash";
 
+"SERVERHEAD" = "Start webserver";
 "MOUNTPOINTS" = "List mounted devices";
 "SERVERHEADLESS" = "Start webserver headless";
 
