add font view, clean up no longer needed debug stuff, fix dpkg and process spawning view, start work on asset catalog viewer (can open catalogs but crashes)

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -56,6 +56,7 @@
 "OPEN_DPKGDEB" = "Open in Deb Builder";
 "OPEN_SPAWN" = "Spawn As Binary";
 "OPEN_CAR" = "Asset Catalog Viewer";
+"OPEN_FONT" = "Font Viewer";
 
 "SHOW_DENIED" = "Permission Denied";
 "SHOW_INFO" = "File Info";
