switch to using pogo CommandRunner (including a fix to CommandRunner), update spawn view to better capture stdout/stderr, asset catalog view crashes no matter what temporarily

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -192,7 +192,10 @@
 //spawn
 "SPAWN_ARGS" = "Enter program arguments";
 "SPAWN_ENV" = "Enter environment variables";
+"SPAWN_ROOTCONFIRM" = "Spawn as Root";
 "SPAWN_CONFIRM" = "Spawn";
+"STDOUT" = "stdout";
+"STDERR" = "stderr";
 
 //dpkg
 "DPKGDEB_OUTDIR" = "Specify the destination directory";
