fix font in spawn view, add applist to /Applications, fix some crashes from force unwraps, add error handling to fontview and hexview

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -105,7 +105,7 @@
 //symtouch view
 "SYMTOUCH_TITLE" = "Create New Symlink";
 "SYMTOUCH_NAME" = "Enter symbolic link name";
-"SYMTOUCH_DEST" = "Enter symbolic link destination directory";
+"SYMTOUCH_DEST" = "Enter symbolic link destination path";
 
 //rename view
 "RENAME_TITLE" = "Rename File To";
