add theoretical support for svg, including Open In. pressing Open As Image now prompts you to choose between RGBA (UIImage) or SVG (SVGDocument, ty serena) and this uses showSubView[31]

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -51,6 +51,8 @@
 "OPEN_AUDIO" = "Audio Player";
 "OPEN_VIDEO" = "Video Player";
 "OPEN_IMAGE" = "Image Viewer";
+"OPEN_IMAGERGBA" = "Open As RGBA";
+"OPEN_IMAGESVG" = "Open As SVG";
 "OPEN_TEXT" = "Text Editor";
 "OPEN_HEX" = "Hex Editor";
 "OPEN_PLIST" = "Plist Editor";
