hex editor cleanup (still crashes when you try and delete a row though... unsure why) and MAJOR substring overhaul. now using a substring Extension from stackoverflow that makes everything look much nicer

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -97,8 +97,8 @@
 "SECONDS" = "seconds";
 
 //text editor
-"LINEADD" = "Add Line After";
-"LINEREMOVE" = "Remove Line at";
+"LINEADD" = "Insert Line After";
+"LINEREMOVE" = "Remove Line";
 "LINESELECTED" = "Selected Line";
 "LINEADD_DESCRIPTION" = "Enter new text line";
 
