fix the Localizable.strings formatting error lol

--- a/Spartan/en.lproj/Localizable.strings
+++ b/Spartan/en.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "ERR_NOJAILBREAK" = "You need to be jailbroken for this function";
 "LOADING" = "Loading...";
 
-"NOT_JB" = "You need to be jailbroken for this function."
+"NOT_JB" = "You need to be jailbroken for this function.";
 
 "YES" = "Yes";
 "NO" = "No";
